--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -21,14 +21,16 @@
         <ImageView
             android:id="@+id/image_top_imageview"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:layout_marginBottom="6dp"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/image_1" />
 
         <ImageView
             android:id="@+id/image_bottom_imageview"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/image_2" />
 
     </LinearLayout>
@@ -36,7 +38,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_menu_container"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
