--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -8,6 +8,11 @@
     android:background="@android:color/black"
     tools:context=".ui.game.GameFragment">
 
+    <android.opengl.GLSurfaceView
+        android:id="@+id/gameSurface"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <LinearLayout
         android:id="@+id/game_image_container"
         android:layout_width="match_parent"
