successful render two image

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,42 +9,19 @@
     android:background="@android:color/black"
     tools:context=".ui.game.GameFragment">
 
-    <android.opengl.GLSurfaceView
+    <com.olbigames.finddifferencesgames.game.GameGLSurfaceView
         android:id="@+id/gameSurface"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <LinearLayout
-        android:id="@+id/game_image_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/game_menu_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/image_top_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginBottom="6dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/image_1" />
-
-        <ImageView
-            android:id="@+id/image_bottom_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/image_2" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_menu_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:paddingTop="6dp"
         android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
