--- a/app/src/main/res/layout/fragment_game_list.xml
+++ b/app/src/main/res/layout/fragment_game_list.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.GameListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/games_recyclerview"
@@ -16,12 +16,13 @@
         tools:layout_editor_absoluteX="93dp"
         tools:layout_editor_absoluteY="-350dp" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/olbiProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical"
+        android:background="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/games_recyclerview"
         app:layout_constraintStart_toStartOf="@+id/games_recyclerview"
@@ -43,23 +44,28 @@
             android:id="@+id/load_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:fontFamily="@font/averia_libre_light_italic"
             android:text="@string/load_message"
             android:textColor="@color/colorAccent"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <ProgressBar
             android:id="@+id/progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="8dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="8dp"
             android:indeterminate="true"
             android:max="100"
             android:progressDrawable="@drawable/olbi_progress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-    </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/load_message" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
