--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="ButtonRobotoBoldWhiteLarge">
+        <item name="android:textSize">@dimen/text_size_xxxx_large</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/colorDownloadLevelButton</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
