add possibility use hidden hint

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -55,12 +55,29 @@
                 android:textColor="@android:color/white" />
         </FrameLayout>
 
-        <ImageView
-            android:id="@+id/game_hint"
+        <FrameLayout
+            android:id="@+id/hint_counter_container"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/hint"
-            app:layout_constraintEnd_toStartOf="@+id/next_game" />
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/next_game"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/game_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/hint" />
+
+            <TextView
+                android:id="@+id/hint_counter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:text="@string/_10"
+                android:textColor="@android:color/white" />
+        </FrameLayout>
 
         <ImageView
             android:id="@+id/next_game"
