--- a/app/src/main/res/layout/dialog_game_complete.xml
+++ b/app/src/main/res/layout/dialog_game_complete.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraintLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/bg_dialog_completed"
     android:elevation="20dp"
     android:paddingBottom="12dp"
-    android:background="@drawable/bg_dialog_completed"
-    android:layout_gravity="center"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -16,46 +15,62 @@
     <View
         android:id="@+id/view_separator"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView2"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:adSize="BANNER"
+        app:adUnitId="@string/banner_ad_unit_id_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
+        android:id="@+id/all_game"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/all_game"
-        android:background="@drawable/button_menu"
         android:layout_marginStart="40dp"
         android:layout_marginTop="6dp"
-        app:layout_constraintTop_toBottomOf="@+id/view_separator"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <ImageButton android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:id="@+id/view_separator_vertical"
-        android:background="@drawable/winnercup"
-        app:layout_constraintTop_toBottomOf="@+id/view_separator"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/button_menu"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/adView2" />
 
     <ImageButton
+        android:id="@+id/view_separator_vertical"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:background="@drawable/winnercup"
+        app:layout_constraintBottom_toBottomOf="@+id/all_game"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/all_game" />
+
+    <ImageButton
         android:id="@+id/next_game"
-        android:background="@drawable/button_next"
-        android:layout_marginTop="6dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/view_separator"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:background="@drawable/button_next"
+        app:layout_constraintBottom_toBottomOf="@+id/view_separator_vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view_separator_vertical" />
 
     <ImageButton
         android:id="@+id/ib_free_hints"
         android:layout_width="160dp"
         android:layout_height="50dp"
-        android:background="@drawable/free_hints"
         android:layout_marginTop="12dp"
+        android:background="@drawable/free_hints"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_separator_vertical" />
