--- a/app/src/main/res/layout-land/dialog_game_complete.xml
+++ b/app/src/main/res/layout-land/dialog_game_complete.xml
@@ -3,32 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraintLayout2"
-    android:layout_width="wrap_content"
+    android:layout_width="450dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@drawable/bg_dialog_completed"
     android:elevation="20dp"
-    android:padding="14dp"
+    android:paddingBottom="14dp"
+    android:paddingTop="14dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
-    <View
-        android:id="@+id/view_separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView2"
-        android:layout_width="match_parent"
+        android:layout_width="420dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         app:adSize="BANNER"
         app:adUnitId="@string/banner_ad_unit_id_1"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,8 +32,8 @@
         android:id="@+id/all_game"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/button_menu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adView2" />
@@ -57,7 +52,7 @@
         android:id="@+id/next_game"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/button_next"
         app:layout_constraintBottom_toBottomOf="@+id/view_separator_vertical"
         app:layout_constraintEnd_toEndOf="parent"
