--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -14,86 +14,78 @@
         android:id="@+id/game_surface_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/game_menu_container"
+        app:layout_constraintBottom_toTopOf="@+id/game_counter_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/game_menu_container"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@id/adView1">
+    <ImageView
+        android:id="@+id/all_game"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/button_menu"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/adView1"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/game_counter_container"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/adView1"
+        app:layout_constraintStart_toEndOf="@+id/all_game">
 
         <ImageView
-            android:id="@+id/all_game"
+            android:id="@+id/game_counter_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/button_menu"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:src="@drawable/dif_counter" />
 
-        <FrameLayout
-            android:id="@+id/game_counter_container"
+        <TextView
+            android:id="@+id/game_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/all_game"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_gravity="center"
+            android:text="@string/_0_10"
+            android:textColor="@android:color/white" />
+    </FrameLayout>
 
-            <ImageView
-                android:id="@+id/game_counter_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/dif_counter" />
-
-            <TextView
-                android:id="@+id/game_counter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/_0_10"
-                android:textColor="@android:color/white" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/hint_counter_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/next_game"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/game_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/hint" />
-
-            <TextView
-                android:id="@+id/hint_counter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="@string/_10"
-                android:textColor="@android:color/white" />
-        </FrameLayout>
+    <FrameLayout
+        android:id="@+id/hint_counter_container"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/adView1"
+        app:layout_constraintEnd_toStartOf="@+id/next_game">
 
         <ImageView
-            android:id="@+id/next_game"
+            android:id="@+id/game_hint"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/button_next"
-            app:layout_constraintEnd_toEndOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:src="@drawable/hint" />
 
+        <TextView
+            android:id="@+id/hint_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:text="@string/_10"
+            android:textColor="@android:color/white" />
+    </FrameLayout>
+
+    <ImageView
+        android:id="@+id/next_game"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/button_next"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/adView1"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView1"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         app:adSize="BANNER"
