--- a/app/src/main/res/drawable/dialog_button_background.xml
+++ b/app/src/main/res/drawable/dialog_button_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorDialogBackground" />
-    <corners android:radius="16dp" />
+    <solid android:color="@android:color/transparent" />
+    <corners android:radius="8dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorGray" />
+        android:color="@android:color/white" />
 </shape>
