--- a/app/src/main/res/layout-land/dialog_game_complete.xml
+++ b/app/src/main/res/layout-land/dialog_game_complete.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraintLayout2"
     android:layout_width="450dp"
@@ -8,8 +7,8 @@
     android:layout_gravity="center"
     android:background="@drawable/bg_dialog_completed"
     android:elevation="20dp"
-    android:paddingBottom="14dp"
     android:paddingTop="14dp"
+    android:paddingBottom="14dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -20,10 +19,10 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        app:adSize="BANNER"
-        app:adUnitId="@string/banner_ad_unit_id_1"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        app:adSize="BANNER"
+        app:adUnitId="@string/banner_ad_unit_id_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +34,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/button_menu"
+        android:contentDescription="@string/game_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adView2" />
 
@@ -43,6 +43,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/winnercup"
+        android:contentDescription="@string/winner_cup"
         app:layout_constraintBottom_toBottomOf="@+id/all_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +55,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/button_next"
+        android:contentDescription="@string/next_game"
         app:layout_constraintBottom_toBottomOf="@+id/view_separator_vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view_separator_vertical" />
@@ -64,6 +66,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/free_hints"
+        android:contentDescription="@string/ad_free_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_separator_vertical" />
