--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/game_layout_container"
@@ -24,79 +23,83 @@
         android:id="@+id/all_game"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/button_menu"
         android:layout_marginStart="12sp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/game_list"
+        android:src="@drawable/button_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-        <FrameLayout
-            android:id="@+id/game_counter_container"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/all_game">
+    <FrameLayout
+        android:id="@+id/game_counter_container"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/all_game">
 
-            <ImageView
-                android:id="@+id/game_counter_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/dif_counter" />
+        <ImageView
+            android:id="@+id/game_counter_image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/difference_counter"
+            android:src="@drawable/dif_counter" />
 
-            <TextView
-                android:id="@+id/game_counter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/_0_10"
-                android:textColor="@android:color/white" />
-        </FrameLayout>
+        <TextView
+            android:id="@+id/game_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white"
+            tools:text="0/10" />
+    </FrameLayout>
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView1"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            app:adSize="BANNER"
-            app:adUnitId="@string/banner_ad_unit_id_1"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/hint_counter_container"
-            app:layout_constraintStart_toEndOf="@+id/game_counter_container" />
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView1"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        app:adSize="BANNER"
+        app:adUnitId="@string/banner_ad_unit_id_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/hint_counter_container"
+        app:layout_constraintStart_toEndOf="@+id/game_counter_container" />
 
-        <FrameLayout
-            android:id="@+id/hint_counter_container"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/next_game">
+    <FrameLayout
+        android:id="@+id/hint_counter_container"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/next_game">
 
-            <ImageView
-                android:id="@+id/game_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/hint" />
+        <ImageView
+            android:id="@+id/game_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/hidden_hints_counter"
+            android:src="@drawable/hint" />
 
-            <TextView
-                android:id="@+id/hint_counter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="@string/_10"
-                android:textColor="@android:color/white" />
-        </FrameLayout>
+        <TextView
+            android:id="@+id/hint_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:text="@string/_10"
+            android:textColor="@android:color/white" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/next_game"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/button_next"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/next_game"
+        android:src="@drawable/button_next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
