--- a/app/src/main/res/layout/item_level.xml
+++ b/app/src/main/res/layout/item_level.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/black"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/black"
+    android:padding="6dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/level_image_cardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         app:cardCornerRadius="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,20 +19,23 @@
             android:id="@+id/level_image_imageview"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:contentDescription="@string/game_preview"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"/>
+            android:src="@drawable/ic_launcher_background" />
 
         <ImageView
             android:id="@+id/reload_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/reload"/>
+            android:contentDescription="@string/reload"
+            android:src="@drawable/reload" />
 
         <ImageView
             android:id="@+id/check_iv"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:src="@drawable/check"/>
+            android:contentDescription="@string/completed_game"
+            android:src="@drawable/check" />
 
     </androidx.cardview.widget.CardView>
 
@@ -42,11 +45,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:layout_marginTop="30dp"
-        android:text="@string/level"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/level_image_cardview"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Рівень 1" />
 
     <TextView
         android:id="@+id/game_progress_textview"
@@ -54,10 +57,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:gravity="center"
-        android:text="@string/_0_0"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/level_image_cardview" />
+        app:layout_constraintStart_toEndOf="@+id/level_image_cardview"
+        tools:text="0/10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
