--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,42 +8,69 @@
         android:id="@+id/homeFragment"
         android:name="com.olbigames.finddifferencesgames.ui.home.GameListFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_game_list" >
+        tools:layout="@layout/fragment_game_list">
         <action
             android:id="@+id/action_homeFragment_to_gameFragment"
-            app:destination="@id/gameFragment" />
+            app:destination="@id/gameFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_homeFragment_to_downloadNewLevelFragment"
+            app:destination="@id/downloadNewLevelFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
         android:name="com.olbigames.finddifferencesgames.ui.game.GameFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" >
+        tools:layout="@layout/fragment_game">
         <action
             android:id="@+id/action_gameFragment_to_downloadNewLevelFragment"
-            app:destination="@id/downloadNewLevelFragment" />
+            app:destination="@id/downloadNewLevelFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_gameFragment_to_gameCompleteDialog"
             app:destination="@id/gameCompleteDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:launchSingleTop="true"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@+id/homeFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.olbigames.finddifferencesgames.ui.splash.SplashFragment"
+        android:name="com.olbigames.finddifferencesgames.ui.home.SplashFragment"
         android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
+        tools:layout="@layout/fragment_splash">
         <action
             android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:launchSingleTop="true"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/splashFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/downloadNewLevelFragment"
         android:name="com.olbigames.finddifferencesgames.ui.game.DownloadLevelFragment"
         android:label="DownloadNewLevelFragment"
-        tools:layout="@layout/fragment_more_games"/>
+        tools:layout="@layout/fragment_more_games" />
     <dialog
         android:id="@+id/gameCompleteDialog"
         android:name="com.olbigames.finddifferencesgames.ui.game.GameCompleteDialog"
         android:label="GameCompleteDialog"
-        tools:layout="@layout/dialog_game_complete"/>
+        tools:layout="@layout/dialog_game_complete" />
 </navigation>
