--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#D81B60</color>
     <color name="colorPrimaryDark">#822601</color>
     <color name="colorAccent">#FBDB38</color>
+
     <color name="colorDownloadLevelButton">#9163A4</color>
     <color name="colorDialogBackground">#1E1E1E</color>
+    <color name="colorGray">#3E3D3D</color>
 </resources>
