--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,13 @@
     <dimen name="text_size_xxx_large">20sp</dimen>
     <dimen name="text_size_xxxx_large">24sp</dimen>
 
-    <dimen name="margin_normal">16dp</dimen>
+    <dimen name="xxx_small">10dp</dimen>
+    <dimen name="xx_small">11dp</dimen>
+    <dimen name="extra_small">12dp</dimen>
+    <dimen name="medium">14dp</dimen>
+    <dimen name="large">15dp</dimen>
+    <dimen name="extra_large">16dp</dimen>
+    <dimen name="xx_large">17dp</dimen>
+    <dimen name="xxx_large">20dp</dimen>
+    <dimen name="xxxx_large">24dp</dimen>
 </resources>
