--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,9 +18,11 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="DialogStyle" parent="Base.Theme.AppCompat.Dialog">
-        <item name="android:windowMinWidthMajor">50%</item>
-        <item name="android:windowMinWidthMinor">50%</item>
+    <!-- Alert dialog style. -->
+    <style name="FindDifferenceAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="colorAccent">@android:color/white</item>
+        <item name="android:windowBackground">@drawable/bg_dialog_completed</item>
     </style>
 
 </resources>
